# One-Embedding

./: .gitignore  .pre-commit-config.yaml  ANALYSIS.md  CLAUDE.md  LICENSE  LITERATURE.md  README.md  STRATEGY.md  pyproject.toml
data/annotations/: pdb_organisms.json  uniprot_annotations.json
data/benchmark_suite/: metadata.json
data/benchmarks/: baseline_benchmarks.json  benchmark_suite_assembly.json  bitwidth_sweep_results.json  chained_codec_results.json  channel_compression_results.json  (+41 more)
demo/: README.md  build.py  show.py
docs/: AUDIT_FINDINGS.md  CALIBRATION.md  EXPECTED_QA.md  EXPERIMENTS.md  HANDOFF.md  MANUSCRIPT_SKELETON.md  STATE_OF_THE_PROJECT.md  codec_centering_explained.md  exp48_rns_under_compression.md  exp51_polarquant.md  exp55_NEXT_SESSION_HANDOFF.md  exp55_vep_retention.md  exp56_vep_codec_megasweep.md  one_embedding_toolkit_groundwork.md  one_embedding_toolkit_setup.md  related-work.md
experiments/: 01_extract_residue_embeddings.py  02_baseline_benchmarks.py  03_quick_comparison.py  04_narrowing.py  11_channel_compression.py  12_per_residue_validation.py  13_robust_validation.py  14_two_head_training.py  15_external_validation.py  16_hpo_contrastive.py  17_scaling_and_ablations.py  18_one_embedding.py  19_enriched_pooling.py  20_universal_one_embedding.py  21_codec_candidates.py  22_path_geometry.py  23_euclidean_eval.py  24_plm_benchmark_suite.py  25_universal_codec_benchmark.py  26_chained_codec_benchmark.py  27_float16_benchmark.py  28_extreme_compression_benchmark.py  29_exhaustive_fruit_sweep.py  30_toxprot_protspace_bundle.py  31_bitwidth_sweep.py  32_pq_on_rp512.py  33_vq_codec.py  34_progressive_codec.py  35_embedding_phylogenetics.py  35b_crossval_subset.py  36_toolkit_benchmarks.py  37_structural_retention.py  38_projection_quality_diagnostic.py  39_train_cnn_probes.py  40_build_benchmark_suite.py  41_768d_retention_benchmarks.py  42_udonpred_comparison.py  44_unified_codec_benchmark.py  45_disorder_forensics.ipynb  45_disorder_helpers.py  (+26 more)
notebooks/: analysis.ipynb
scripts/: extract_esmc.py  watchdog_exp47.sh
slurm/: extract_embeddings.sh  train_compressor.sh
tests/: test_abtt_stability.py  test_aligner.py  test_ancestral.py  test_benchmark_disorder.py  test_benchmark_per_residue_runner.py  test_benchmark_probes.py  test_benchmark_protein_level_runner.py  test_benchmark_rules.py  test_benchmark_statistics.py  test_classifier.py  test_cli.py  test_codec.py  test_codec_unified.py  test_conservation.py  test_core_codec.py  test_embedding_phylo.py  test_enriched_transforms.py  test_extract.py  test_extreme_compression.py  test_hrr.py  test_integration.py  test_integration_pipeline.py  test_io_one_h5.py  test_mutation_scanner.py  test_oemb_io.py  test_one_embedding.py  test_path_transforms.py  test_per_residue_probes.py  test_preprocessing.py  test_quantization.py  test_retrieval_euclidean.py  test_rns.py  test_seq2oe_continuous.py  test_seq2oe_model.py  test_seq2oe_splits.py  test_structural_similarity.py  test_tensor_decomposition.py  test_tool_align.py  test_tool_classify.py  test_tool_conserve.py  (+11 more)
(+327 files in other folders)
